update Dockerfile (no KVM on macOS...)